add separate endpoint to create shopping list directly
